fix(theme): `content-wrapper::before` background clipping issue

--- a/guide/.vuepress/styles/layout.scss
+++ b/guide/.vuepress/styles/layout.scss
@@ -15,7 +15,7 @@
 		position: absolute;
 		top: 0;
 		left: -100%;
-		bottom: 0;
+		bottom: -4rem;
 		z-index: 1;
 		pointer-events: none;
 	}
